Fix fdo#45177 - avoid linked undo for the while.

While I try to wrap head around subtleties for linked undo in
Impress outline view, disable that here for the while. Better than
a crash for sure.